--- a/rickAndMorty/package.json
+++ b/rickAndMorty/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.17",
-    "@angular/cdk": "^10.2.7",
+    "@angular/cdk": "^11.2.9",
     "@angular/common": "~12.2.17",
     "@angular/compiler": "~12.2.17",
     "@angular/core": "~12.2.17",
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~12.2.17",
     "@angular/platform-browser-dynamic": "~12.2.17",
     "@angular/router": "~12.2.17",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
     "rxjs": "~6.6.3",
