--- a/reactive-forms/package.json
+++ b/reactive-forms/package.json
@@ -11,16 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.12",
+    "@angular/animations": "^13.3.12",
     "@angular/cdk": "^13.3.7",
     "@angular/common": "~13.3.12",
     "@angular/compiler": "~13.3.12",
     "@angular/core": "~13.3.12",
     "@angular/forms": "~13.3.12",
-    "@angular/material": "^13.3.9",
+    "@angular/material": "^13.3.7",
     "@angular/platform-browser": "~13.3.12",
     "@angular/platform-browser-dynamic": "~13.3.12",
     "@angular/router": "~13.3.12",
+    "ngx-age-validator": "^0.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
